--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/yu.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YOUSUF | Personal Portfolio</title>
+
+    <!-- font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="bg-white text-darkTxtColor dark:bg-darkColor dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
