--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="!scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/yu.svg" />
@@ -12,7 +12,9 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-white text-darkTxtColor dark:bg-darkColor dark:text-white">
+  <body
+    class="bg-gray-50 text-gray-950 relative pt-28 sm:pt-36 dark:bg-gray-900 dark:text-gray-50 dark:text-opacity-90"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
