--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en" class="!scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/yu.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/yu.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YOUSUF | Personal Portfolio</title>
+    <title>YOUSUF</title>
 
     <!-- font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body
-    class="bg-gray-50 text-gray-950 relative pt-28 sm:pt-36 dark:bg-gray-900 dark:text-gray-50 dark:text-opacity-90"
-  >
+  <body class="bg-lightBg dark:bg-darkBg font-popins">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
