--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/yu.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="a software engineer who loves building cool things with code. In addition to coding, I also make Blogging where I focus on technology.."
+    />
     <title>YOUSUF</title>
 
     <!-- font -->
