--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="a software engineer who loves building cool things with code. In addition to coding, I also make Blogging where I focus on technology.."
+      content="a software engineer who loves building cool things with code. In addition to coding, I also make Blogging where I focus on technology."
     />
     <title>YOUSUF</title>
 
